# elf-reader

./: .clang-format  .gitignore  CMakeLists.txt  README.org
doc/: section_header.org
src/: CMakeLists.txt  Elf32.cpp  Elf32.h  Elf64.cpp  Elf64.h  ElfBase.cpp  ElfBase.h  ElfFile.cpp  ElfFile.h  elf.cpp  elf.h  elf32_parser.cpp  elf32_parser.h  elf_base.cpp  elf_base.h  main.cc  main.cpp  os_elf.h  section.cpp  section.h  section_header.cc  section_header.h  str_section.cpp  str_section.h  str_tab.cc  str_tab.h  sys_elf.cc  sys_elf.h  util.cpp  util.h
test/extern_so/: extern_so.c  test_extern_so.cc
test/programs/c_str/: c_str.cc
test/programs/single_instance/: single_instance.cc
